@@ -1,7 +1,7 @@
-# $Id: tk.spec,v 1.15.2.13 2006/03/07 05:35:34 dgp Exp $
+# $Id: tk.spec,v 1.15.2.14 2006/05/04 13:09:47 dgp Exp $
 # This file is the basis for a binary Tk Linux RPM.
 
-%define version 8.4.13
+%define version 8.4.14
 %define directory /usr/local
 
 Summary: Tk graphical toolkit for the Tcl scripting language.
@@ -14,7 +14,7 @@ Source: http://prdownloads.sourceforge.net/tcl/tk%{version}-src.tar.gz
 URL: http://www.tcl.tk/
 Packager: Carina
 Buildroot: /var/tmp/%{name}%{version}
-Requires: XFree86-libs >= 3.3.3, XFree86-devel >= 3.3.3, tcl = 8.4.13
+Requires: XFree86-libs >= 3.3.3, XFree86-devel >= 3.3.3, tcl = 8.4.14
 
 %description
 The Tcl (Tool Command Language) provides a powerful platform for
