@@ -1,3 +1,14 @@
+2006-05-04  Don Porter  <dgp@users.sourceforge.net>
+
+        * README:               Bump version number to 8.4.14
+        * generic/tk.h:
+        * unix/configure.in:
+        * unix/tk.spec:
+        * win/configure.in:
+
+        * unix/configure:       autoconf-2.13
+        * win/configure:
+
 2006-04-28  Daniel Steffen  <das@users.sourceforge.net>
 
 	* macosx/tkMacOSXWm.c (TkWmMapWindow, InitialWindowBounds): fix use of
